--- a/Exercise 2/index.html
+++ b/Exercise 2/index.html
@@ -16,19 +16,19 @@
     </div>
     <div class="form-group">
         <label for="name">Name:</label>
-        <input type="name" class="form-control" id="name" placeholder="Alice Lee">
+        <input type="name" id="name" placeholder="Alice Lee">
     </div>
     <div class="form-group">
         <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" placeholder="alice-lee@gmail.com">
+        <input type="email" id="email" placeholder="alice-lee@gmail.com">
     </div>
     <div class="form-group">
         <label for="email">Phone Number:</label>
-        <input type="email" class="form-control" id="email" placeholder="+1-647-998-0453">
+        <input type="email" id="email" placeholder="+1-647-998-0453">
     </div>
     <div class="form-group">
         <label for="textArea">Message:</label>
-        <textarea name="message" id="textArea" class="form-control" cols="30" rows="10" placeholder="I would like to check out the blinds!"></textarea>
+        <textarea name="message" id="textArea" placeholder="I would like to check out the blinds!"></textarea>
     </div>
 
     <button class="button">SEND MESSAGE</button>
