Finished implementing the sign-up form from exercise 1.

--- a/Bootstrap Exercise 1/index.html
+++ b/Bootstrap Exercise 1/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>JS For Beginners</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
+<body>
+    <div class="sign-in container rounded shadow-lg col-md-7 col-lg-5 col-sm-9 mx-auto p-5 mt-5">
+        <h1 class="text-center font-weight-light">Sign In</h1>
+        <div class="form pt-5 d-flex flex-column">
+            <div class="form-group text-center rounded">
+                <input class="border-1 p-3 w-100" type="email" id="email" placeholder="Email address">
+            </div>
+            <div class="form-group rounded">
+                <input class="w-100 p-3 border-1" type="password" id="password" placeholder="Password">
+            </div>
+        </div>
+        <label class="form-check-label pl-4 mt-1 mb-2">
+            <input type="checkbox" class="form-check-input" value="">Remember password
+        </label>
+        <button class="rounded text-white border-0 font-weight-bold col-12 p-3 mt-2" style="background-color: #0d6efd;">SIGN IN</button>
+        <hr class="my-4">
+        <button class="rounded text-white border-0 font-weight-bold col-12 p-3 fw-bold" style="background-color:#dc392d">SIGN IN WITH GOOGLE</button>
+        <button class="rounded text-white border-0 font-weight-bold col-12 p-3 mt-2" style="background-color: #3b5998;">SIGN IN WITH FACEBOOK</button>
+        
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
 
 
 </html>
