Finished the implementation of Bootstrap Exercise 2.

--- a/Bootstrap Exercise 2/index.html
+++ b/Bootstrap Exercise 2/index.html
@@ -4,3 +4,42 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
+<body>
+
+    <h1 class="bg-primary p-5 text-white text-center font-weight-light">Meet the Team</h1>
+    <div class="d-sm-block d-lg-flex card-group border-0 m-sm-5">
+        <div class="card shadow-lg border-0 m-sm-4">
+            <img class="card-img-top" src="https://source.unsplash.com/TMgQMXoglsM/500x350" alt="Card image cap">
+            <div class="card-body text-center">
+                <h4 class="card-title">Team Member</h1>
+                <h5 class="font-weight-light">Web Developer</h5>
+            </div>
+        </div>
+        <div class="card shadow-lg border-0 m-4">
+            <img class="card-img-top" src="https://source.unsplash.com/9UVmlIb0wJU/500x350" alt="Card image cap">
+            <div class="card-body text-center">
+                <h4 class="card-title">Team Member</h1>
+                <h5 class="font-weight-light">Web Developer</h5>
+            </div>
+        </div>
+        <div class="card shadow-lg border-0 m-4">
+            <img class="card-img-top" src="https://source.unsplash.com/sNut2MqSmds/500x350" alt="Card image cap">
+            <div class="card-body text-center">
+                <h4 class="card-title">Team Member</h1>
+                <h5 class="font-weight-light">Web Developer</h5>
+            </div>
+        </div>
+        <div class="card shadow-lg border-0 m-4">
+            <img class="card-img-top" src="https://source.unsplash.com/7u5mwbu7qLg/500x350" alt="Card image cap">
+            <div class="card-body text-center">
+                <h4 class="card-title">Team Member</h1>
+                <h5 class="font-weight-light">Web Developer</h5>
+            </div>
+        </div>
+    </div>
+
+
+</body>
+
+</html>
