Modified Website 1 files and created Website 2 folder and files.

--- a/Exercise 1/index.html
+++ b/Exercise 1/index.html
@@ -10,7 +10,7 @@
 
     <section class="container">
         <div class="left-side">LSide (auto)</div>
-        <div class="content" type="click">Content(expands on click)</div>
+        <div class="content">Content(expands on click)</div>
         <div class="right-side">R Side(100pt)</div>
     </section>
     
