Changes were made to the different HTML pages.

--- a/Website 2/old-posts.html
+++ b/Website 2/old-posts.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" async="" src="https://www.gstatic.com/recaptcha/releases/kcXVPRWG7fMILHmzon0--fD3/recaptcha__en.js" crossorigin="anonymous" integrity="sha384-9ah7W73C/cOhQyUXG801ICjOv2nqRu6Hzv+2XEu2HbUGxrKtThNV8wr0fzIArgUy"></script>
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg">
         
         <div class="container">
@@ -24,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav mr-auto float-lg-right">
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
@@ -43,11 +44,10 @@
 
     </nav>
 
-<section class="hero d-flex align-items-center justify-content-center text-center" style="">
+<section class="hero post-header d-flex align-items-center justify-content-center text-center">
     <div class="overlay"></div>
     <div class="header text-center">
-        <h1>Clean Blog</h1>
-        <h3>A Blog Theme by Start Bootstrap</h3>
+        <h1>Posts</h1>
     </div>
 </section>
 
@@ -56,58 +56,13 @@
         <div class="col-12 col-lg-8 col-md-10 mx-auto">
             <article>
                 <a href="">
-                    <h1 class="pb-1">Man must explore, and this is exploration at its greatest</h1>
-                    <h3>Problems look mighty small from 150 miles up</h3>
+                    <h1 class="pb-1">Dinosaurs are extinct today</h1>
+                    <h3>because they lacked opposable thumbs and the brainpower to build a space program.</h3>
                 </a>
-                <p class="pb-3">Posted by Start Bootstrap on January 31, 2020 · 4 mins read</p>
+                <p class="pb-3">Posted by Start Bootstrap on January 27, 2020 · 4 mins read</p>
                 <hr>
             </article>
-
-            <article>
-                <a href="">
-                    <h1 class="pb-1">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</h1>
-                    <h3>Never in all their history have men been able truly to conceive of the world...</h3>
-                </a>
-                <p class="pb-3">Posted by Start Bootstrap on January 31, 2020 · 4 mins read</p>
-                <hr>
-            </article>
-
-            <article>
-                <a href="">
-                    <h1 class="pb-1">Science has not yet mastered prophecy</h1>
-                    <h3>We predict too much for the next year and yet far too little for the next ten.</h3>
-                </a>
-                <p class="pb-3">Posted by Start Bootstrap on January 30, 2020 · 4 mins read</p>
-                <hr>
-            </article>
-
-            <article>
-                <a href="">
-                    <h1 class="pb-1">Science has not yet mastered prophecy</h1>
-                    <h3>We predict too much for the next year and yet far too little for the next ten.</h3>
-                </a>
-                <p class="pb-3">Posted by Start Bootstrap on January 30, 2020 · 4 mins read</p>
-                <hr>
-            </article>
-
-            <article>
-                <a href="">
-                    <h1 class="pb-1">Failure is not an option</h1>
-                    <h3>Never in all their history have men been able truly to conceive of the world.</h3>
-                </a>
-                <p class="pb-3">Posted by Start Bootstrap on January 28, 2020 · 4 mins read</p>
-                <hr>
-            </article>
-
-            <article>
-                <a href="">
-                    <h1 class="pb-1">The dreams of yesterday are the hopes of today and the reality of tomorrow.</h1>
-                    <h3>Never in all their history have men been able truly to conceive of the world...</h3>
-                </a>
-                <p class="pb-3">Posted by Start Bootstrap on January 28, 2020 · 4 mins read</p>
-                <hr>
-            </article>
-            <button class="btn float-right">View Other Posts →</button>
+            <a href="posts.html"><button class="btn float-left">← Newer Posts</button></a>
         </div>
     </div>
 </section>
