--- a/Website 2/about.html
+++ b/Website 2/about.html
@@ -5,13 +5,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>    <link rel="stylesheet" href="style.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>    
+    <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script id="ga-gtag" type="text/javascript" async="" src="https://www.googletagmanager.com/gtag/js?id=UA-38417733-1"></script>
     <script type="text/javascript" async="" src="https://www.gstatic.com/recaptcha/releases/kcXVPRWG7fMILHmzon0--fD3/recaptcha__en.js" crossorigin="anonymous" integrity="sha384-9ah7W73C/cOhQyUXG801ICjOv2nqRu6Hzv+2XEu2HbUGxrKtThNV8wr0fzIArgUy"></script>
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg">
         
         <div class="container">
@@ -24,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav mr-auto float-lg-right">
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
@@ -43,71 +45,20 @@
 
     </nav>
 
-<section class="hero d-flex align-items-center justify-content-center text-center" style="">
+<section class="hero about-header d-flex align-items-center justify-content-center text-center" style="">
     <div class="overlay"></div>
     <div class="header text-center">
-        <h1>Clean Blog</h1>
-        <h3>A Blog Theme by Start Bootstrap</h3>
+        <h1>About Me</h1>
+        <h3>This is what I do.</h3>
     </div>
 </section>
 
-<section class="blog-list d-block container">
+<section class="about d-block container">
     <div class="row">
-        <div class="col-12 col-lg-8 col-md-10 mx-auto">
-            <article>
-                <a href="">
-                    <h1 class="pb-1">Man must explore, and this is exploration at its greatest</h1>
-                    <h3>Problems look mighty small from 150 miles up</h3>
-                </a>
-                <p class="pb-3">Posted by Start Bootstrap on January 31, 2020 · 4 mins read</p>
-                <hr>
-            </article>
-
-            <article>
-                <a href="">
-                    <h1 class="pb-1">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</h1>
-                    <h3>Never in all their history have men been able truly to conceive of the world...</h3>
-                </a>
-                <p class="pb-3">Posted by Start Bootstrap on January 31, 2020 · 4 mins read</p>
-                <hr>
-            </article>
-
-            <article>
-                <a href="">
-                    <h1 class="pb-1">Science has not yet mastered prophecy</h1>
-                    <h3>We predict too much for the next year and yet far too little for the next ten.</h3>
-                </a>
-                <p class="pb-3">Posted by Start Bootstrap on January 30, 2020 · 4 mins read</p>
-                <hr>
-            </article>
-
-            <article>
-                <a href="">
-                    <h1 class="pb-1">Science has not yet mastered prophecy</h1>
-                    <h3>We predict too much for the next year and yet far too little for the next ten.</h3>
-                </a>
-                <p class="pb-3">Posted by Start Bootstrap on January 30, 2020 · 4 mins read</p>
-                <hr>
-            </article>
-
-            <article>
-                <a href="">
-                    <h1 class="pb-1">Failure is not an option</h1>
-                    <h3>Never in all their history have men been able truly to conceive of the world.</h3>
-                </a>
-                <p class="pb-3">Posted by Start Bootstrap on January 28, 2020 · 4 mins read</p>
-                <hr>
-            </article>
-
-            <article>
-                <a href="">
-                    <h1 class="pb-1">The dreams of yesterday are the hopes of today and the reality of tomorrow.</h1>
-                    <h3>Never in all their history have men been able truly to conceive of the world...</h3>
-                </a>
-                <p class="pb-3">Posted by Start Bootstrap on January 28, 2020 · 4 mins read</p>
-                <hr>
-            </article>
-            <button class="btn float-right">View Other Posts →</button>
+        <div class="col-12 col-lg-8 col-md-10 mx-auto" style="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
         </div>
     </div>
 </section>
@@ -129,7 +80,6 @@
         </div>
     </div>
 </footer>
-
 
 </body>
 
